fixed spacing between verticla texts

--- a/index.css
+++ b/index.css
@@ -237,7 +237,7 @@ body {
     .title {
         font-size: 4rem;
         margin-right: 0rem;
-        margin-bottom: 12rem;
+        margin-bottom: 15rem;
         display: flex;
         justify-content: flex-end;
         align-content: center;
@@ -252,11 +252,13 @@ body {
     .About-Me {
         font-size: 2.3rem;
         margin: 0;
+        margin-top: 0.5rem
     }
 
     .My-Name {
         text-align: center;
         transition: 0.15s;
+        margin-top: 0.5rem
     }
 
     .My-Name:hover {
@@ -266,6 +268,7 @@ body {
     .My-Job {
         font-size: 2.2rem;
         margin: 0;
+        margin-top: 0.5rem
     }
 
     .My-Job:hover {
@@ -276,8 +279,8 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        margin-top: -7.5rem;
     }
-
 
 
 }
